# airflow_sketcher

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/airflow/dags/: airflow_sketcher_dag_generator.py
examples/airflow/plugins/: airflow_sketcher_plugin.py  sitecustomize.py
examples/excalidraw/: 1_simple_two_tasks.excalidraw  2_bash_and_python.excalidraw
src/airflow_sketcher/: __init__.py  dag_factory.py
src/airflow_sketcher/plugins/: __init__.py  builder.py
tests/: test_dag_factory.py
tests/fixtures/excalidraw/: a_dag_with_python.excalidraw  dag2.excalidraw
tests/fixtures/python_modules/: shared_funcs.py
tests/support/: airflow_stubs.py
