[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'airflow-sketcher'
version = '0.1.0'
description = 'Airflow Sketcher plugin and DAG factory for Excalidraw-based DAG authoring.'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'apache-airflow>=3.0,<4.0',
    'fastapi>=0.115,<1.0',
    'pydantic>=2.0,<3.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.0',
    'ruff>=0.6',
]

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests']